--- a/templates/entry.cfg.erb
+++ b/templates/entry.cfg.erb
@@ -1,18 +1,34 @@
 #
 # Listener for domain <%=name%>
 #
+<%- if @listen_protocol -%>
 <%=listen_protocol%>
-    Address <%=listen_ip%>
-    Port    <%=listen_port%>
-    <% if listen_protocol == "ListenHTTPS"%>
-    Cert    "/etc/ssl/certs/server.pem"
-    <% end %>
-    Service
-        HeadRequire "<%=head_require-%>"
-        BackEnd
-            Address <%=backend_ip%>
-            Port    <%=backend_port%>
-        End
-    End
+  Address <%=listen_ip%>
+  Port    <%=listen_port%>
+  <%- if listen_protocol == "ListenHTTPS" -%>
+  Cert    "/etc/ssl/certs/server.pem"
+  <%- end -%>
+<%- end -%>
+<%- if @service -%>
+  Service
+    <%- if @head_require -%>
+    HeadRequire "<%=head_require%>"
+    <%- end -%>
+  <%- if @backend and ! @backend.empty? -%>
+    <%- [@backend].flatten.compact.each do |backend_statement| -%>
+      Backend
+      <%-if backend_statement["ip"] and backend_statement["ip"] != '' -%>
+        Address <%= backend_statement["ip"] %>
+      <%- end -%>
+      <%- if backend_statement["port"] and backend_statement["port"] != '' -%>
+        Port <%= backend_statement["port"] %>
+      <%- end -%>
+      End
+    <%- end -%>
+  <%- end -%>
+  End
+<%- end -%>
+<%- if @listen_protocol -%>
 End
+<%- end -%>
 
